feat(auth): :passport_control: add a validate token endpoint for the frontend team
